force-app/main/default/objects/Achievement_Set_Item__c/Achievement_Set_Item__c.object-meta.xml
<CustomObject>
    <description>Achievement Set Item</description>
    <label>Achievement Set Item</label>
    <nameField>
        <displayFormat>ASI{00000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Achievement Set Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>