force-app/main/default/objects/Achievement_Set_Item__c/fields/Achievement_Set__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Set__c</fullName>
    <label>Achievement Set</label>
    <referenceTo>Achievement_Set__c</referenceTo>
    <relationshipLabel>Achievements</relationshipLabel>
    <relationshipName>Achievements</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>