force-app/main/default/objects/Achievement_Set_Item__c/fields/HistoryRecord__c.field-meta.xml
<CustomField>
    <fullName>HistoryRecord__c</fullName>
    <formula>NOT(ISBLANK(EndDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>History Record</label>
    <type>Checkbox</type>
</CustomField>