force-app/main/default/objects/Achievement_Set_Item__c/fields/LevelValue__c.field-meta.xml
<CustomField>
    <fullName>LevelValue__c</fullName>
    <label>LevelValue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>