force-app/main/default/objects/Achievement_Set_Item__c/fields/Min_Speciality_Match__c.field-meta.xml
<CustomField>
    <fullName>Min_Speciality_Match__c</fullName>
    <defaultValue>1.0</defaultValue>
    <label>Min. Speciality Match</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>