force-app/main/default/objects/Achievement_Set_Item__c/fields/NumberOfMonths__c.field-meta.xml
<CustomField>
    <fullName>NumberOfMonths__c</fullName>
    <formula>((YEAR(Today()) - YEAR(DATEVALUE(Date__c))-1) * 12) + (12 - MONTH(DATEVALUE(Date__c))+1) + MONTH(Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>